Github Profile Finder

--- a/app.html
+++ b/app.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="./favicon/OIP.png" type="image/png">
 </head>
 <body>
-     <header>
-        <h1>GitHub Username Finder</h1>
+    <header>
+        <h1>GitHub Profile Finder</h1>
     </header>
     <section id="search">
         <input type="text" id="username-input" placeholder="Enter GitHub Username">
@@ -21,6 +21,7 @@
         <p>Followers: <span id="followers"></span> | Following: <span id="following"></span></p>
         <a id="profile-link" href="#" target="_blank">View GitHub Profile</a>
     </section>
+
     <script src="script.js"></script>
 </body>
 </html>
