Github Profile Finder 🚀

--- a/app.html
+++ b/app.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Profile Finder</title>
-    <link rel="icon" href="./favicon/OIP.png" type="image/png">
+    <link rel="icon" href="./icon/OIP.png" type="image/png">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <header>
