--- a/app.html
+++ b/app.html
@@ -5,122 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Profile Finder</title>
     <link rel="icon" href="./icon/OIP.png" type="image/png">
-    <style>
-        *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-image: url(./img/OIP.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-h1{
-    text-align: center;
-    justify-content: center;
-    padding-top:30px;
-    margin-top: 15px;
-    font-weight: bold;
-}
-#search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 45px;
-    gap: 10px; 
-}
-
-#username-input {
-    width: 280px;
-    padding: 8px;
-    background-color: #c9bebe; 
-    font-size: 16px;
-    border: 2px solid #333;
-    border-radius: 5px;
-    outline: none;
-    transition: all 0.3s ease;
-}
-
-#username-input:focus {
-    border-color: #c8aa33; 
-}
-
-#search-btn {
-    padding: 8px 20px;
-    background-color: #7a6c0c;
-    color: rgb(224, 224, 224);
-    font-size: 16px;
-    border: none;
-    border-radius: 6px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-#search-btn:hover {
-    background-color: #596d54; 
-}
-
-#profile {
-    display: none; 
-    margin-top: 30px;
-    text-align: center;
-    background-color: #c9bebe; 
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#name {
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-
-#avatar {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%; 
-    margin-bottom: 15px;
-    border: 3px solid #847208; 
-}
-
-
-#bio {
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 15px;
-    padding: 0 10px;
-}
-
-#profile p {
-    font-size: 14px;
-    color: #4e4b4b;
-    margin: 5px 0;
-}
-
-#profile-link {
-    display: inline-block;
-    padding: 10px 15px;
-    background-color: #806b06;
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-#profile-link:hover {
-    background-color: #596d54;
-}
-
-    </style>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <header>
