Github Profile Finder🚀

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Profile Finder</title>
     <link rel="icon" href="./icon/OIP.png" type="image/png">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
